[package]
name = "miq"
version = "0.1.0"
edition = "2021"
authors = ["Fernando Ayats <ayatsfer@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = [
    "sqlite",
    "without-deprecated",
] }
bytes = "1.4.0"
clap = { version = "4.1.8", features = [
    "derive",
    "env",
    "cargo",
] }
reqwest = { version = "0.11.14", default-features = false, features = [
    "rustls-tls",
] }
schemars = "0.8.12"
serde = { version = "1.0.154", features = [
    "derive",
] }
serde_json = "1.0.94"
toml = "0.7.2"
libsqlite3-sys = { version = "0.25.2", default-features = false, features = [
    "pkg-config",
    "min_sqlite_version_3_6_8",
] }
tempfile = "3.4.0"
nix = "0.26.2"
os_pipe = { version = "1.1.3", features = [
    "io_safety",
] }
libc = "0.2.140"
color-eyre = { version = "0.6.2", features = [
    "tracing-error",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
] }
daggy = "0.8.0"
educe = "0.4.21"
diesel_migrations = { version = "2.0.0", features = [
    "sqlite",
] }
# FIXME mlua 0.9 release need https://github.com/khvzak/mlua/issues/240
mlua = { git = "https://github.com/khvzak/mlua", tag = "v0.9.0-beta.2", features = [
    "serialize",
    "lua54",
    "vendored",
    "macros",
] }
sha2 = "0.10.6"
fnv = "1.0.7"
url = { version = "2.3.1", features = [
    "serde",
] }
textwrap = "0.16.0"
tracing-error = "0.2.0"
ambassador = { version = "0.3.5", default-features = false }
derive_builder = "0.12.0"
async-trait = "0.1.68"
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"
tokio-process-stream = "0.4.0"
owo-colors = "3.5.0"
